# mgx-demo

./: .dockerignore  .env.example  .gitignore  CLI_UI_SUMMARY.md  COMPLETED_REFACTORING.md  MIGRATION_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  pyproject.toml  test_boss_simple.py  test_context_fix.py  test_langchain_threading.py  test_tool_context_debug.py
change-logs/: 2025-02-01-context-abstraction.md  2026-02-01-cli-ui-enhancement.md  2026-02-01-dev-server-management-phase1.md  2026-02-01-fix-context-threading.md  2026-02-01-langgraph-1.0.7-migration.md  2026-02-02-add-history-messages-support.md  2026-02-02-add-tool-calling-fields.md  2026-02-02-apisix-auto-route-config.md  2026-02-02-frontend-refactoring.md  2026-02-05-context-compression-middleware.md  2026-02-07-apisix-etcd-dev-url-404-fix.md  2026-02-07-docker-unified-image.md  2026-02-07-dynamic-graph-routing.md  2026-02-07-mcp-api-key-session-binding.md  2026-02-07-prompt-and-message-id-refactor.md  2026-02-08-dev-url-direct-access.md  2026-02-08-frontend-api-base-cors.md  2026-02-08-message-complete-fallback-fix.md  2026-02-08-tool-call-streaming.md  CHANGELOG-agent-containerization.md  CHANGELOG-agent-team-refactor.md  agent_streaming_implementation.md  astream_migration.md  implementation-summary.md  refactoring-summary.md  schema_changes_agent_name.md  streaming_events_implementation.md  subgraphs_support.md
docs/: QUICKSTART.md  agent-container-guide.md  agent_streaming_implementation.md  architecture.md  cli-ui-quick-start.md  context-refactoring-guide.md  dev_server_management_phase1.md  (+6 more)
(+198 files in other folders)
